# arq-website

./: .env  .gitignore  README.md  manage.py  pyproject.toml
app/: auth.py  database.py  main.py  models.py
app/routers/: frontend.py
app/templates/: base.html  directions.html  index.html  vacancies.html
app/templates/components/: footer.html  navbar.html
scripts/: admin_manager.py  init_db.py  print_db.py
tests/: test_auth.py  test_database.py
